fix: no Entrypoint tab completion